# UrlShorter

./: README.md  pyproject.toml
src/url_shorter/: app.py  dependencies.py  enums.py  utils.py
src/url_shorter/db/: config.py
src/url_shorter/db/dals/: url_dal.py
src/url_shorter/db/models/: url.py
src/url_shorter/routers/: urls.py
src/url_shorter/schemas/: url.py
