[tool.poetry]
name = "urlshorter"
version = "0.1.0"
description = "Short url generator"
authors = ["Murzinov Mikhail <murzinov01@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
databases = "^0.7.0"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
